    The One Probe, Hwyla, The Beneath, Cooking for Blockheads, Tiny Progressions,
    FoamFix, RFTools Utility, Draconic Evolution, Curios, Forestry,
    Immersive Engineering, Immersive Railroading, Track API, Sound Filters,
    Block Renderer, Item Zoom, Neat, and McJtyLib.
    - Updated Pam's Harvestcraft so we can detect it now.
  Added Team Manager.
  Added Circuit Fabricator.
    - Added 8 circuits, however you can only craft 7 of them at the moment.
  Added a standard Generator to ADDSynth Energy.
    - It takes in standard fuel items such as Coal, Charcoal, Wood, and Planks.
    - Updated the texture to high definition.
  Added a new Scanning Laser item.
  Whitelisted TileEntities to work with Applied Energistics Spatial-IO.
    - As of now, this needs further testing to ensure there aren't any errors.
  Added Celestial Gem:
    - They look and function the same as the Energy Crystal in previous versions.
    - You now get Energy Crystals by smelting Celestial Gems in a Blast Furnace.
  The amount of energy the Energy Crystal, Energy Crystal Shards, and Light Block
    give you in the Crystal Energy Extractor now shows in the tooltip when you
    hover over the item.
  Added Plasma item.
    - But players won't be able to do anything with it until the next update.
  Added a new debug feature to ADDSynthCore that allows you to print all defined
    block and item tags into text files.
  Added stats for Converting Gems, Firing Lasers, and Identifying Items.
  Added 4 commands to ADDSynthCore. They don't do anything important, they're just
    there to try out and play with.
  Added a config option to ADDSynthCore that swaps the controls used to Add or Delete
    notes to/from the Music Box.
  Added Swap Track buttons to the Music Box gui.
  If you mouse over a Music Sheet item it now says if its blank or it contains Music Data.
CHANGED:
  Made ADDSynth Materials into its own mod.
  The Music Box gui no longer has the JEI item panel. It doesn't need it.