@@ -13,7 +13,7 @@
       "item": "addsynth_energy:energy_wire"
     },
     "e": {
-      "item": "overpowered:energized_power_core"
+      "item": "addsynth_energy:circuit_tier_3"
     }
   },
   "result": {
