@@ -16,7 +16,7 @@
       "item": "overpowered:data_cable"
     },
     "n": {
-      "item": "overpowered:nullified_power_core"
+      "item": "addsynth_energy:circuit_tier_6"
     }
   },
   "result": {
